--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
 
 
+<body>
+<h3>aminul71bd.github.io  </h3><br/>
+<img src="./resources/final_photo-2_w240.png" height="150px" width="150px" alt="photo"/><br/>
+<h1>My Education and Technical Skills</h1><hr><br/>
 
 
 
 
 
+
+
+
+
+</body>
 
 </html>
